Fixed bug #24766 (strange result array from unpack())

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@141778 c90b9560-bf6c-de11-be94-00142212c4b1